--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "dialect": "sqlite",
-    "database": "./database.sqlite"
+    "storage": "./database.sqlite"
   },
   "test": {
     "username": "root",
