--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,28 @@
 {
   "env": {
+    "es2021": true,
+    "node": true
+  },
+  "extends": "eslint:recommended",
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "rules": {
+    "indent": "off",
+    "linebreak-style": "off",
+    "quotes": "off",
+    "semi": "off",
+    "comma-dangle": "off",
+    "max-len": "off",
+    "no-trailing-spaces": "off",
+    "eol-last": "off",
+    "space-before-function-paren": "off",
+    "object-curly-spacing": "off"
+  }
+}
+{
+  "env": {
     "browser": true,
     "commonjs": true,
     "es2021": true
@@ -10,10 +33,7 @@
     "ecmaVersion": "latest"
   },
   "rules": {
-    "indent": [
-      "error",
-      2
-    ],
+    "indent": "off",
     "linebreak-style": [
       "error",
       "unix"
